--- a/index.html
+++ b/index.html
@@ -84,16 +84,15 @@
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">               
                                 <div align="right">    
-                                <a href="#"> en </a> / <a href="#">es</a>
                                 </div>
                                   <ul class="nav navbar-nav">
-                                    <li><a href="#">Home</a></li>        
+                                    <li><a href="#" data-i18n="nav.home" > </a></li>        
                                     <li role="presentation" class="dropdown">
-                                        <a id="drop2" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
-                                          Hostal
+                                        <a id="drop2" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" data-i18n="nav.hostal">
+                                          
                                         </a>
                                         <ul id="menu2" class="dropdown-menu" role="menu">
-                                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Info</a></li>
+                                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#" data-i18n="nav.info" ></a></li>
                                           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Room details</a></li>
                                         </ul>
                                     </li>
@@ -912,7 +911,10 @@
 
 
         <!-- my js -->
+
+        <script src="js/i18next-1.11.2.min.js"></script>
+        <script src="js/translation.js"></script>
         <script src="js/main.js"></script>
-		<script src="js/scripts.js"></script>
+
     </body>
 </html>
