Update index, add hostal, rural housing and contact pages

--- a/hostal-campito.html
+++ b/hostal-campito.html
@@ -248,6 +248,7 @@
         <!-- end other detect room section -->
         </section>
 
+        <!-- start map -->
         <div class="contact_google_map_area margin-bottom-75">
             <div class="container">
                 <div class="contact_google_map">
@@ -255,7 +256,7 @@
                 </div>
             </div>
         </div>
-        <!-- end other detect room section -->
+        <!-- end map -->
 
         <!-- start contact us area -->
         <section class="contact_us_area content-left">
@@ -387,7 +388,8 @@
 
         <!-- my js -->
         <script src="js/main.js"></script>
-		<!-- Google maps API -->
+		
+        <!-- Google maps API -->
         <script src="http://maps.googleapis.com/maps/api/js"></script>
         <script>
 
