Update index, css.Add hostal, rural housing and contact pages

--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
                                     <li><a href="#">Home</a></li>        
                                     <li><a href="hostal-campito.html">Hostal</a></li>        
                                     <li><a href="vivienda-rural-atlantico-sur.html">Rural Housing</a></li>
-                                    <li><a href="#">Restaurant</a></li>       
-                                    <li><a href="contact-us.html">Contact us</a></li>        
- 
+                                    <li><a href="restaurante-campito.html">Restaurant</a></li>        
                                   </ul>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
@@ -376,7 +374,6 @@
                                     <a href="#pick-up" aria-controls="pick-up" role="tab" data-toggle="tab"><img src="img/home-facilities-icon-eight.png" alt="pick-up"><span>pick-up</span></a>
                                 </li>
                         </ul>                           
-
                           
                             <!-- Tab panes -->
                             <div class="tab-content">
