--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -48,7 +48,7 @@
         <![endif]-->
 
     </head>
-    <body id="accomodation_page">
+    <body id="atlantico_sur_page">
 
         <!-- start header -->
         <header class="header_area">
@@ -82,9 +82,7 @@
                                     <li><a href="index.html">Home</a></li>        
                                     <li><a href="hostal-campito.html">Hostal</a></li>        
                                     <li><a href="#">Rural Housing</a></li>                                            
-                                    <li><a href="#">Restaurant</a></li>       
-                                    <li><a href="contact-us.html">Contact us</a></li>        
- 
+                                    <li><a href="restaurante-campito.html">Restaurant</a></li>        
                                   </ul>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
@@ -396,7 +394,6 @@
         <script src="js/main.js"></script>
 		<!-- Google maps API -->
         <script src="http://maps.googleapis.com/maps/api/js"></script>
-        
         <script>
 
             var myCenter=new google.maps.LatLng(36.276231, -6.086556);
