--- a/hostal-campito.html
+++ b/hostal-campito.html
@@ -48,7 +48,7 @@
         <![endif]-->
 
     </head>
-    <body id="accomodation_page">
+    <body id="campito_page">
 
          <!-- start header -->
         <header class="header_area">
@@ -82,9 +82,7 @@
                                     <li><a href="index.html">Home</a></li>        
                                     <li><a href="#">Hostal</a></li>        
                                     <li><a href="vivienda-rural-atlantico-sur.html">Rural Housing</a></li>
-                                    <li><a href="#">Restaurant</a></li>       
-                                    <li><a href="contact-us.html">Contact us</a></li>        
- 
+                                    <li><a href="restaurante-campito.html">Restaurant</a></li>        
                                   </ul>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
@@ -422,5 +420,6 @@
             google.maps.event.addDomListener(window, 'load', initialize);        
 
         </script>
+
     </body>
 </html>
