Add pages for restaurant, hostal y rural housing and update css and index

--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
                                             <div class="co-lg-7 col-md-7 col-sm-6">
                                                 <div class="single-tab-details">
                                                     <h3>Restaurant</h3>
-                                                    <p>
-                                                        The Campito Restaurant is located on the ground floor of the establishment, has indoor and outdoor terrace tables, all products are cooked in a coal oven Josper.
+                                                    <p>The Campito Restaurant is located on the ground floor of the establishment, has indoor and outdoor terrace tables, all products are cooked in a coal oven Josper.
                                                     </p>
                                                     <div class="our_services">
                                                         <a href="#" class="margin-right-33">Service Hours; 19.00-22:00 </a>
