--- a/index.html
+++ b/index.html
@@ -410,8 +410,7 @@
                                             <div class="co-lg-7 col-md-7">
                                                 <div class="single-tab-details">
                                                     <h3>Pick Up</h3>
-                                                    <p>
-                                                        Hostal Campito has parking spaces 3 minutes walk from the accommodation price is 10 € per day, booking must first request.
+                                                    <p>Hostal Campito has parking spaces 3 minutes walk from the accommodation price is 10 € per day, booking must first request.
                                                     </p>
                                                     <div class="our_services">
                                                         <a href="#" class="margin-right-33">Service Hours; 19.00-22:00 </a>
