--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -306,10 +306,12 @@
                                 <div class="footer_logo">
                                     <a href="#"><img src="img/footer-logo-one.png" alt=""></a>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet, conser adipiscing elit. In consectetur tincidunt dolor.</p>
+                                <p>En el centro histórico, a sólo cuatro minutos a pie de la playa. Con un diseño moderno y funcional, ofrecemos a nuestros clientes una buena localización y servicios.</p>
                                 <ul>
                                     <li>
-                                        <P><i class="fa fa-map-marker"></i>Conil de la frontera<br>Andalucía</P>
+                                        <p><i class="fa fa-map-marker"></i>
+                                        Pascual Junquera 10 11140. Conil de la Frontera,<br />
+                                        Conil de la frontera<br />Andalucía</p>
                                     </li>
                                 </ul>
                             </div>
@@ -320,20 +322,36 @@
                                     <h5 class="padding-left-15">Quick Links</h5>
                                     <div class="col-lg-6 col-md-6 col-sm-6">
                                         <ul>
-                                            <li><a href="#">Rooms</a></li>
-                                            <li><a href="#">Food & Drinks</a></li>
-                                            <li><a href="#">Beach Venues</a></li>
-                                            <li><a href="#">Amenities</a></li>
+                                            <li><a href="https://conilhospeda.com/hostal-campito/">Conil Hospeda</a></li>
+                                            <li><a href="hostal-campito.html">Hostal</a></li>
+                                            <li><a href="vivienda-rural-atlantico-sur.html">Casas rurales</a></li>
+                                            <li><a href="restaurante-campito.html">Restaurante</a></li>
                                         </ul>  
                                     </div>
                                     <div class="col-lg-6 col-md-6 sol-sm-6">
                                         <ul>
-                                            <li><a href="#">Noordwijk</a></li>
-                                            <li><a href="#">Wellness</a></li>
-                                            <li><a href="#">Manifesto</a></li>
-                                            <li><a href="#">Contact</a></li>
+                                            <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
+                                            <li><a href="#">Surf</a></li>
+                                            <li><a href="#"></a></li>
+                                            <li><a href="contact.html">Contacto</a></li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                            <div class="row">
+                                <div class="footer_widget clearfix">
+                                   
+                                        <div id="TA_selfserveprop658" class="TA_selfserveprop">
+                                        <ul id="IGZ9sq" class="TA_links lbuDHBZkt4">
+                                        <li id="0knUuKlE" class="ZE1BmlMMwUP">
+                                        <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
+                                        </li>
+                                        </ul>
+                                        </div>
+                                        <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=658&amp;locationId=1113664&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
+
                                 </div>
                             </div>
                         </div>
@@ -342,7 +360,7 @@
                     <div class="row">
                         <div class="container">
                             <div class="footer_copyright margin-tb-50 content-center">
-                                <p>© 2015 <a href="#">Hotelbooking</a>. All rights reserved</p>
+                                <p>© 2016 <a href="#">Hostal Campito</a>. All rights reserved</p>
                             </div>
                         </div>
                     </div>
@@ -390,6 +408,8 @@
 
 
         <!-- my js -->
+                <script src="js/i18next-1.11.2.min.js"></script>
+        <script src="js/translation.js"></script>
         <script src="js/main.js"></script>
 		<!-- Google maps API -->
         <script src="http://maps.googleapis.com/maps/api/js"></script>
