--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -79,7 +79,8 @@
                                     <li><a href="index.html">Home</a></li>        
                                     <li><a href="hostal-campito.html">Hostal</a></li>        
                                     <li><a href="#">Rural Housing</a></li>                                            
-                                    <li><a href="restaurante-campito.html">Restaurant</a></li>        
+                                    <li><a href="restaurante-campito.html">Restaurant</a></li>      
+                                    <li><a href="#" class="lang" data-lang="en" >English</a></li>   
                                   </ul>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
