Update info, internationalization

--- a/restaurante-campito.html
+++ b/restaurante-campito.html
@@ -75,15 +75,15 @@
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">               
-                                <div align="right">    
-                                <a href="#"> en </a> / <a href="#">es</a>
-                                </div>
                                   <ul class="nav navbar-nav">
-                                    <li><a href="index.html">Home</a></li>        
-                                    <li><a href="hostal-campito.html">Hostal</a></li>        
-                                    <li><a href="vivienda-rural-atlantico-sur.html">Rural Housing</a></li>
-                                    <li><a href="#">Restaurant</a></li>        
+                                    <li><a href="index.html" data-i18n="nav.home"></a></li>        
+                                    <li><a href="hostal.html" data-i18n="nav.hostal"></a></li>        
+                                    <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
+                                    <li><a href="#" data-i18n="nav.res"></a></li>        
                                   </ul>
+                                     <div class="emergency_number">
+                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
+                                  </div>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
                         </div>
@@ -98,7 +98,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="breadcrumb_main nice_title">
-                        <h2>Hostal Campito</h2>
+                        <h2 data-i18n="restaurant.name"></h2>
                     </div>
                 </div>
             </div>            
@@ -112,7 +112,7 @@
                 <div class="row">
                     <div class="select_room clearfix">
                         <div class="section_title nice_title text-center">
-                            <p> Además del confort y de las mejores condiciones para su descanso, aquí encontrará un trato cercano y familiar por parte de nuestro personal. Disponemos de tres tipos de habitación, todas con cuarto de baño con secador de pelo, televisor con pantalla plana, wifi, caja fuerte y aire acondicionado. En la planta baja hay un restaurante donde se mezclan el mar y la huerta, el atún y el vino de las viñas gaditanas. Todos los platos se hacen al horno de carbón. Disponemos de un solárium con vistas al mar donde además se sirven los desayunos. </p>
+                            <p data-i18n="welcome.description_res"></p>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="send_mail">
                                 <div class="section_title margin-bottom-40">
-                                    <h4>send us an email</h4>
+                                    <h4 data-i18n="restaurant.contact_email"></h4>
                                 </div>
                                 <form action="contact_process.php" method="post">
                                     <div class="row">
@@ -158,7 +158,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="contact_info margin-top-65">
                                 <div class="section_title margin-bottom-45">
-                                    <h4>Contact Info</h4>
+                                    <h4 data-i18n="restaurant.contact_info"></h4>
                                 </div>
                                 <ul class="clearul">
                                     <li>
@@ -181,8 +181,7 @@
                                 </ul>
                                 <div class="social_icons clearfix">
                                     <ul class="clearul">
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.facebook.com/hostalbar.campito"><i class="fa fa-facebook"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -199,19 +198,19 @@
                 <div class="contact_us clearfix">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="call clearfix">
-                            <h6>Phone</h6>
+                            <h6 data-i18n="contact.phone"></h6>
                             <p>956 440 708</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="email_us clearfix">
-                            <h6>Email</h6>
+                            <h6 data-i18n="contact.email"></h6>
                             <p>info@hostalcampito.com</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="email_us clearfix">
-                            <h6>Email</h6>
+                            <h6 data-i18n="contact.email"></h6>
                             <p>campitoconil@gmail.com</p>
                         </div>
                     </div>
@@ -238,7 +237,7 @@
                                 <div class="footer_logo">
                                     <a href="#"><img src="img/footer-logo-one.png" alt=""></a>
                                 </div>
-                                <p>En el centro histórico, a sólo cuatro minutos a pie de la playa. Con un diseño moderno y funcional, ofrecemos a nuestros clientes una buena localización y servicios.</p>
+                                <p data-i18n="footer.desc"></p>
                                 <ul>
                                     <li>
                                         <p><i class="fa fa-map-marker"></i>
@@ -251,7 +250,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="row">
                                 <div class="footer_widget clearfix">
-                                    <h5 class="padding-left-15">Quick Links</h5>
+                                    <h5 class="padding-left-15" data-i18n="footer.quicklinks"></h5>
                                     <div class="col-lg-6 col-md-6 col-sm-6">
                                         <ul>
                                             <li><a href="https://conilhospeda.com/hostal-campito/">Conil Hospeda</a></li>
@@ -265,24 +264,22 @@
                                             <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
                                             <li><a href="#">Surf</a></li>
                                             <li><a href="#"></a></li>
-                                            <li><a href="contact.html">Contacto</a></li>
+                                            <li><a href="contact.html" data-i18n="footer.contact"></a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                            <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="row">
                                 <div class="footer_widget clearfix">
-                                   
-                                        <div id="TA_selfserveprop658" class="TA_selfserveprop">
-                                        <ul id="IGZ9sq" class="TA_links lbuDHBZkt4">
-                                        <li id="0knUuKlE" class="ZE1BmlMMwUP">
-                                        <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
-                                        </li>
-                                        </ul>
-                                        </div>
-                                        <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=658&amp;locationId=1113664&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
+                                   <div id="TA_selfserveprop541" class="TA_selfserveprop">
+                                   <ul id="MBpUNnXU" class="TA_links M2MLa4">
+                                   <li id="danlGfSM3HX" class="bQKHEZsx5Rur"><a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
+                                   </li>
+                                   </ul>
+                                   </div>
+                                   <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=541&amp;locationId=2324551&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
 
                                 </div>
                             </div>
