--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -48,7 +48,7 @@
         <![endif]-->
 
     </head>
-    <body id="atlantico_sur_page">
+    <body id="accomodation_page">
 
         <!-- start header -->
         <header class="header_area">
@@ -56,11 +56,14 @@
             <!-- start main header -->
             <div class="main_header_area">
                 <div class="container">
+                    <div class="floatright"><a href="?t=es">es</a>/<a href="?t=en">en</a></div>
                     <!-- start mainmenu & logo -->
                     <div class="mainmenu">
+
                         <div id="nav">
                             <nav class="navbar navbar-default">
                                 <!-- Brand and toggle get grouped for better mobile display -->
+
                                 <div class="navbar-header">
                                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                                     <span class="sr-only">Toggle navigation</span>
@@ -68,20 +71,22 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                   </button>
+
                                   <div class="site_logo fix">
                                       <a id="brand" class="clearfix navbar-brand border-right-whitesmoke" href="index.html"><img src="img/site-logo.png" alt="Trips"></a>
                                   </div>
                                 </div>
-
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">               
-                                    <ul class="nav navbar-nav">
-                                    <li><a href="index.html">Home</a></li>        
-                                    <li><a href="hostal-campito.html">Hostal</a></li>        
-                                    <li><a href="#">Rural Housing</a></li>                                            
-                                    <li><a href="restaurante-campito.html">Restaurant</a></li>      
-                                    <li><a id="changelang" href="#" class="lang" data-lang="en" >English</a></li>   
+                                  <ul class="nav navbar-nav">
+                                    <li><a href="index.html" data-i18n="nav.home"></a></li>        
+                                    <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>        
+                                    <li><a href="#" data-i18n="nav.house"></a></li>
+                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>        
                                   </ul>
+                                     <div class="emergency_number">
+                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
+                                  </div>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
                         </div>
@@ -98,7 +103,7 @@
         <!-- end header -->
 
         <!-- start breadcrumb -->
-        <section class="breadcrumb_main_area margin-bottom-80">
+        <section class="breadcrumb_main_area2 margin-bottom-80">
             <div class="container-fluid">
                 <div class="row">
                     <div class="breadcrumb_main nice_title">
@@ -286,8 +291,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="social_icons clearfix">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/hostalbar.campito"><i class="fa fa-facebook"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -339,19 +343,17 @@
                                 </div>
                             </div>
                         </div>
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                            <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="row">
                                 <div class="footer_widget clearfix">
-                                   
-                                        <div id="TA_selfserveprop658" class="TA_selfserveprop">
-                                        <ul id="IGZ9sq" class="TA_links lbuDHBZkt4">
-                                        <li id="0knUuKlE" class="ZE1BmlMMwUP">
+                                        <div id="TA_selfserveprop782" class="TA_selfserveprop">
+                                        <ul id="tsN3fx9e" class="TA_links H77Q2Gp03p0">
+                                        <li id="68SMs2qMgiEQ" class="tww2xvoJ5">
                                         <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
                                         </li>
                                         </ul>
                                         </div>
-                                        <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=658&amp;locationId=1113664&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
-
+                                        <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=782&amp;locationId=3642547&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
                                 </div>
                             </div>
                         </div>
