--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <!-- start main header -->
             <div class="main_header_area">
                 <div class="container">
+                <div class="floatright"><a href="?t=es">es</a>/<a href="?t=en">en</a></div>
                     <!-- start mainmenu & logo -->
                     <div class="mainmenu">
                         <div id="nav">
