footer, lang select, conilhospeda iamges

--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -56,14 +56,11 @@
             <!-- start main header -->
             <div class="main_header_area">
                 <div class="container">
-                    <div class="floatright"><a href="?t=es">es</a>/<a href="?t=en">en</a></div>
-                    <!-- start mainmenu & logo -->
+                <!-- start mainmenu & logo -->
                     <div class="mainmenu">
-
                         <div id="nav">
                             <nav class="navbar navbar-default">
                                 <!-- Brand and toggle get grouped for better mobile display -->
-
                                 <div class="navbar-header">
                                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                                     <span class="sr-only">Toggle navigation</span>
@@ -71,20 +68,26 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                   </button>
-
                                   <div class="site_logo fix">
                                       <a id="brand" class="clearfix navbar-brand border-right-whitesmoke" href="index.html"><img src="img/site-logo.png" alt="Trips"></a>
+                                       <div class="header_login floatleft">
+                                        <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-top.png" width="90%"></a>
+                                      </div>
                                   </div>
                                 </div>
+
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">               
+                                <div align="right">    
+                                </div>
                                   <ul class="nav navbar-nav">
-                                    <li><a href="index.html" data-i18n="nav.home"></a></li>        
+                                    <li><a href="/" data-i18n="nav.home"></a></li>        
                                     <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>        
-                                    <li><a href="#" data-i18n="nav.house"></a></li>
-                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>        
+                                    <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
+                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
+                                    <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
-                                     <div class="emergency_number">
+                                  <div class="emergency_number">
                                       <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
@@ -300,6 +303,7 @@
         </section>
         <!-- end contact us area -->
 
+
         <!-- start footer -->
         <footer class="footer_area">
             <div class="container">
@@ -310,7 +314,7 @@
                                 <div class="footer_logo">
                                     <a href="#"><img src="img/footer-logo-one.png" alt=""></a>
                                 </div>
-                                <p>En el centro histórico, a sólo cuatro minutos a pie de la playa. Con un diseño moderno y funcional, ofrecemos a nuestros clientes una buena localización y servicios.</p>
+                                <p data-i18n="footer.desc"></p>
                                 <ul>
                                     <li>
                                         <p><i class="fa fa-map-marker"></i>
@@ -320,49 +324,44 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
+                        <div class="col-lg-4 col-md-4 col-sm-4" >
                             <div class="row">
                                 <div class="footer_widget clearfix">
-                                    <h5 class="padding-left-15">Quick Links</h5>
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <h5 class="padding-left-15" data-i18n="footer.quicklinks"></h5>
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
                                         <ul>
+                                            <li><a href="/" data-i18n="nav.home"></a></li>
+                                            <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>
+                                            <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
+                                            <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
                                             <li><a href="https://conilhospeda.com/hostal-campito/">Conil Hospeda</a></li>
-                                            <li><a href="hostal-campito.html">Hostal</a></li>
-                                            <li><a href="vivienda-rural-atlantico-sur.html">Casas rurales</a></li>
-                                            <li><a href="restaurante-campito.html">Restaurante</a></li>
+                                            <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
                                         </ul>  
                                     </div>
-                                    <div class="col-lg-6 col-md-6 sol-sm-6">
-                                        <ul>
-                                            <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
-                                            <li><a href="#">Surf</a></li>
-                                            <li><a href="#"></a></li>
-                                            <li><a href="contact.html">Contacto</a></li>
-                                        </ul>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
                             <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="row">
-                                <div class="footer_widget clearfix">
-                                        <div id="TA_selfserveprop782" class="TA_selfserveprop">
-                                        <ul id="tsN3fx9e" class="TA_links H77Q2Gp03p0">
-                                        <li id="68SMs2qMgiEQ" class="tww2xvoJ5">
-                                        <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
-                                        </li>
-                                        </ul>
-                                        </div>
-                                        <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=782&amp;locationId=3642547&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
-                                </div>
-                            </div>
+                                    <div id="TA_selfserveprop574" class="TA_selfserveprop">
+                                    <ul id="CUTV2Z" class="TA_links 2dRhrkJbOWNq">
+                                    <li id="6GeErzizb" class="GrpJuD">
+                                    <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
+                                    </li>
+                                    </ul>
+                                    </div>
+                                    <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=574&amp;locationId=3642547&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=false&amp;display_version=2"></script>
+
+
+
                         </div>
                         
                     </div>
                     <div class="row">
                         <div class="container">
                             <div class="footer_copyright margin-tb-50 content-center">
-                                <p>© 2016 <a href="#">Hostal Campito</a>. All rights reserved</p>
+                                <p>© 2016 <a href="#">Hostal Campito</a>. All rights reserved</p> 
                             </div>
                         </div>
                     </div>
