--- a/hostal-campito.html
+++ b/hostal-campito.html
@@ -50,14 +50,13 @@
     </head>
     <body id="accomodation_page" class="gallery_page">
 
-         <!-- start header -->
+        <!-- start header -->
         <header class="header_area">
 
             <!-- start main header -->
             <div class="main_header_area">
                 <div class="container">
-                    <div class="floatright"><a href="?t=es">es</a>/<a href="?t=en">en</a></div>
-                    <!-- start mainmenu & logo -->
+                <!-- start mainmenu & logo -->
                     <div class="mainmenu">
                         <div id="nav">
                             <nav class="navbar navbar-default">
@@ -71,18 +70,24 @@
                                   </button>
                                   <div class="site_logo fix">
                                       <a id="brand" class="clearfix navbar-brand border-right-whitesmoke" href="index.html"><img src="img/site-logo.png" alt="Trips"></a>
+                                       <div class="header_login floatleft">
+                                        <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-top.png" width="90%"></a>
+                                      </div>
                                   </div>
                                 </div>
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">               
+                                <div align="right">    
+                                </div>
                                   <ul class="nav navbar-nav">
-                                    <li><a href="index.html" data-i18n="nav.home"></a></li>        
-                                    <li><a href="#" data-i18n="nav.hostal"></a></li>        
+                                    <li><a href="/" data-i18n="nav.home"></a></li>        
+                                    <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>        
                                     <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
-                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>        
+                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
+                                    <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
-                                     <div class="emergency_number">
+                                  <div class="emergency_number">
                                       <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
@@ -94,6 +99,8 @@
             </div>
             <!-- end main header -->
 
+        </header>
+        <!-- end header -->
         <!-- start breadcrumb -->
         <section class="breadcrumb_main_area margin-bottom-80">
             <div class="container-fluid">
@@ -784,21 +791,15 @@
                             <div class="row">
                                 <div class="footer_widget clearfix">
                                     <h5 class="padding-left-15" data-i18n="footer.quicklinks"></h5>
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
                                         <ul>
+                                            
+                                            <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>
+                                            <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
+                                            <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
                                             <li><a href="https://conilhospeda.com/hostal-campito/">Conil Hospeda</a></li>
-                                            <li><a href="hostal-campito.html">Hostal</a></li>
-                                            <li><a href="vivienda-rural-atlantico-sur.html">Casas rurales</a></li>
-                                            <li><a href="restaurante-campito.html">Restaurante</a></li>
-                                        </ul>  
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 sol-sm-6">
-                                        <ul>
                                             <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
-                                            <li><a href="#">Surf</a></li>
-                                            <li><a href="#"></a></li>
-                                            <li><a href="contact.html" data-i18n="footer.contact"></a></li>
-                                        </ul>
+                                        </ul>  
                                     </div>
                                 </div>
                             </div>
