--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             <!-- start main header -->
             <div class="main_header_area">
                 <div class="container">
-                <div class="floatright"><a href="?t=es">es</a>/<a href="?t=en">en</a></div>
-                    <!-- start mainmenu & logo -->
+                <!-- start mainmenu & logo -->
                     <div class="mainmenu">
                         <div id="nav">
                             <nav class="navbar navbar-default">
@@ -71,6 +70,9 @@
                                   </button>
                                   <div class="site_logo fix">
                                       <a id="brand" class="clearfix navbar-brand border-right-whitesmoke" href="index.html"><img src="img/site-logo.png" alt="Trips"></a>
+                                       <div class="header_login floatleft">
+                                        <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-top.png" width="90%"></a>
+                                      </div>
                                   </div>
                                 </div>
 
@@ -79,10 +81,11 @@
                                 <div align="right">    
                                 </div>
                                   <ul class="nav navbar-nav">
-                                    <li><a href="#" data-i18n="nav.home"></a></li>        
+                                    <li><a href="/" data-i18n="nav.home"></a></li>        
                                     <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>        
                                     <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
-                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>        
+                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
+                                    <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
                                   <div class="emergency_number">
                                       <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
@@ -796,21 +799,15 @@
                             <div class="row">
                                 <div class="footer_widget clearfix">
                                     <h5 class="padding-left-15" data-i18n="footer.quicklinks"></h5>
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
                                         <ul>
+                                            <li><a href="/" data-i18n="nav.home"></a></li>
+                                            <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>
+                                            <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
+                                            <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
                                             <li><a href="https://conilhospeda.com/hostal-campito/">Conil Hospeda</a></li>
-                                            <li><a href="hostal-campito.html">Hostal</a></li>
-                                            <li><a href="vivienda-rural-atlantico-sur.html">Casas rurales</a></li>
-                                            <li><a href="restaurante-campito.html">Restaurante</a></li>
-                                        </ul>  
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 sol-sm-6">
-                                        <ul>
                                             <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
-                                            <li><a href="#">Surf</a></li>
-                                            <li><a href="#"></a></li>
-                                            <li><a href="contact.html" data-i18n="footer.contact"></a></li>
-                                        </ul>
+                                        </ul>  
                                     </div>
                                 </div>
                             </div>
@@ -819,14 +816,7 @@
                             <div class="row">
                                 <div class="footer_widget clearfix">
                                    
-                                        <div id="TA_selfserveprop658" class="TA_selfserveprop">
-                                        <ul id="IGZ9sq" class="TA_links lbuDHBZkt4">
-                                        <li id="0knUuKlE" class="ZE1BmlMMwUP">
-                                        <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
-                                        </li>
-                                        </ul>
-                                        </div>
-                                        <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=658&amp;locationId=1113664&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
+                                     <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-banner.png" class="image-responsive"></a>
 
                                 </div>
                             </div>
