--- a/restaurante-campito.html
+++ b/restaurante-campito.html
@@ -50,13 +50,13 @@
     </head>
     <body id="restaurante_campito_page">
 
-         <!-- start header -->
+        <!-- start header -->
         <header class="header_area">
 
             <!-- start main header -->
             <div class="main_header_area">
                 <div class="container">
-                    <!-- start mainmenu & logo -->
+                <!-- start mainmenu & logo -->
                     <div class="mainmenu">
                         <div id="nav">
                             <nav class="navbar navbar-default">
@@ -70,18 +70,24 @@
                                   </button>
                                   <div class="site_logo fix">
                                       <a id="brand" class="clearfix navbar-brand border-right-whitesmoke" href="index.html"><img src="img/site-logo.png" alt="Trips"></a>
+                                       <div class="header_login floatleft">
+                                        <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-top.png" width="90%"></a>
+                                      </div>
                                   </div>
                                 </div>
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">               
+                                <div align="right">    
+                                </div>
                                   <ul class="nav navbar-nav">
-                                    <li><a href="index.html" data-i18n="nav.home"></a></li>        
-                                    <li><a href="hostal.html" data-i18n="nav.hostal"></a></li>        
+                                    <li><a href="/" data-i18n="nav.home"></a></li>        
+                                    <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>        
                                     <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
-                                    <li><a href="#" data-i18n="nav.res"></a></li>        
+                                    <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
+                                    <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
-                                     <div class="emergency_number">
+                                  <div class="emergency_number">
                                       <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
@@ -93,6 +99,8 @@
             </div>
             <!-- end main header -->
 
+        </header>
+        <!-- end header -->
         <!-- start breadcrumb -->
         <section class="breadcrumb_main_area margin-bottom-80">
             <div class="container-fluid">
@@ -247,49 +255,43 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
+                        <div class="col-lg-4 col-md-4 col-sm-4" >
                             <div class="row">
                                 <div class="footer_widget clearfix">
                                     <h5 class="padding-left-15" data-i18n="footer.quicklinks"></h5>
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
                                         <ul>
+                                            
+                                            <li><a href="hostal-campito.html" data-i18n="nav.hostal"></a></li>
+                                            <li><a href="vivienda-rural-atlantico-sur.html" data-i18n="nav.house"></a></li>
+                                            <li><a href="restaurante-campito.html" data-i18n="nav.res"></a></li>
                                             <li><a href="https://conilhospeda.com/hostal-campito/">Conil Hospeda</a></li>
-                                            <li><a href="hostal-campito.html">Hostal</a></li>
-                                            <li><a href="vivienda-rural-atlantico-sur.html">Casas rurales</a></li>
-                                            <li><a href="restaurante-campito.html">Restaurante</a></li>
+                                            <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
                                         </ul>  
                                     </div>
-                                    <div class="col-lg-6 col-md-6 sol-sm-6">
-                                        <ul>
-                                            <li><a href="http://www.conildelafrontera.es/">Conil de la Frontera</a></li>
-                                            <li><a href="#">Surf</a></li>
-                                            <li><a href="#"></a></li>
-                                            <li><a href="contact.html" data-i18n="footer.contact"></a></li>
-                                        </ul>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
                             <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="row">
-                                <div class="footer_widget clearfix">
-                                   <div id="TA_selfserveprop541" class="TA_selfserveprop">
-                                   <ul id="MBpUNnXU" class="TA_links M2MLa4">
-                                   <li id="danlGfSM3HX" class="bQKHEZsx5Rur"><a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
-                                   </li>
-                                   </ul>
-                                   </div>
-                                   <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=541&amp;locationId=2324551&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
+                                    <div id="TA_selfserveprop960" class="TA_selfserveprop">
+                                    <ul id="2g3DkGKB" class="TA_links VE5bxw">
+                                    <li id="LYcljMQzgZG5" class="pYmYusgKq">
+                                    <a target="_blank" href="https://www.tripadvisor.es/"><img src="https://www.tripadvisor.es/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
+                                    </li>
+                                    </ul>
+                                    </div>
+                                    <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=960&amp;locationId=2324551&amp;lang=es&amp;rating=true&amp;nreviews=0&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=false&amp;display_version=2"></script>
 
-                                </div>
-                            </div>
+
                         </div>
                         
                     </div>
                     <div class="row">
                         <div class="container">
                             <div class="footer_copyright margin-tb-50 content-center">
-                                <p>© 2016 <a href="#">Hostal Campito</a>. All rights reserved</p>
+                                <p>© 2016 <a href="#">Hostal Campito</a>. All rights reserved</p> 
                             </div>
                         </div>
                     </div>
