--- a/restaurante-campito.html
+++ b/restaurante-campito.html
@@ -124,6 +124,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="row text-center">
+                        <div class="col-lg-6 col-lg-offset-3">
+                        <a href="/img/res-carta.png" data-uk-lightbox="">  <img src="/img/res-carta.png" class="image-responsive"></a>
+                        </div>
+                 </div>
+                                 
+
             </div>
         </section>
         <!-- end other detect room section -->
@@ -310,6 +317,8 @@
 		
         <!-- uikit -->
         <script src="js/uikit.min.js"></script>
+        <!-- <script src="js/uikit-modal.js"></script> -->
+        <script src="js/uikit-lightbox.js"></script>
         <!-- easing -->
 		<script src="js/jquery.easing.1.3.min.js"></script>
         <script src="js/datepicker.js"></script>
