--- a/index.html
+++ b/index.html
@@ -689,44 +689,15 @@
         </section>
                                 <div class="row">
                                         <div class="about_booking_room clearfix margin-top-30">
-                                            <div class="col-lg-7 col-md-7 col-sm-6">
+                                            <div class="col-lg-6 col-md-6 col-sm-6">
                                                 <div class="booking_room_details">
                                                     <p data-i18n="welcome.description_res"></p>
 
                                                 </div>
                                             </div>
-                                            <div class="col-lg-5 col-md-5 col-sm-6">
+                                            <div class="col-lg-6 col-md-6 col-sm-6">
                                                 <div class="room_cost">
-                                                    <div class="row">
-                                                        <div class="col-lg-12 col-md-12">
-                                                            <div class="table-responsive">
-                                                                <table class="table table-bordered">
-                                                                    <tr class="room_table">
-                                                                        <td class=""><span class="imp_table_text">Especialidad</span></td>
-                                                                        <td class=""><span class="imp_table_text">Número</span> <br>1</td>
-                                                                        <td class="">Número<br>2</td>
-                                                                        <td class=""><span class="imp_table_text">Número 3</span></td>
-                                                                    </tr>
-                                                                    <tr class="tax_table">
-                                                                        <td class=""><span class="imp_table_text">Tapas</span> <br>calientes</td>
-                                                                        <!-- <td class=""></td>
-                                                                        <td class=""></td> -->
-                                                                        <td class=""><span class="imp_table_text">Número</span> <br>1</td>
-                                                                        <td class="">Número<br>2</td>
-                                                                        <td class=""><span class="imp_table_text">Número 3</span></td>
-                                                                        </tr>
-                                                                    <tr class="total_table">
-                                                                        <td class=""><span class="imp_table_text">Tapas frías</span></td>
-                                                                        <!-- <td class=""></td>
-                                                                        <td class=""></td> -->
-                                                                        <td class=""><span class="imp_table_text">Número</span> <br>1</td>
-                                                                        <td class="">Número<br>2</td>
-                                                                        <td class=""><span class="imp_table_text">Número 3</span></td>
-                                                                    </tr>
-                                                                </table>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                          <a href="/img/res-carta.png" data-uk-lightbox="">  <img src="/img/res-carta.png" class="image-responsive"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -845,6 +816,8 @@
         <script src="js/rev-slider/rs.home.js"></script>
         <!-- uikit -->
         <script src="js/uikit.min.js"></script>
+        <!-- <script src="js/uikit-modal.js"></script> -->
+        <script src="js/uikit-lightbox.js"></script>
         <!-- easing -->
         <script src="js/jquery.easing.1.3.min.js"></script>
         <script src="js/datepicker.js"></script>
