--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -272,9 +272,7 @@
         <!-- start map -->
         <div class="contact_google_map_area margin-bottom-75">
             <div class="container">
-                <div class="contact_google_map">
-                    <div id="contactgoogleMap" style="width:100%;height:374px;"></div>
-                </div>
+                <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJqdL2BkQ3DA0RjCIt2eWvEaQ&key=AIzaSyDX4Quzq8aS33dni13QDFkDL85yL1TZZhs" allowfullscreen></iframe> 
             </div>
         </div>
         <!-- end map -->
@@ -424,38 +422,5 @@
                 <script src="js/i18next-1.11.2.min.js"></script>
         <script src="js/translation.js"></script>
         <script src="js/main.js"></script>
-		<!-- Google maps API -->
-        <script src="http://maps.googleapis.com/maps/api/js"></script>
-        <script>
-
-            var myCenter=new google.maps.LatLng(36.276231, -6.086556);
-            
-            function initialize()
-            {
-            var mapProp = {
-              center:myCenter,
-              zoom:15,
-                scrollwheel: false,
-              mapTypeId:google.maps.MapTypeId.ROADMAP
-              };
-
-            var map=new google.maps.Map(document.getElementById("contactgoogleMap"),mapProp);
-
-            var marker=new google.maps.Marker({
-              position:myCenter,
-              animation:google.maps.Animation.BOUNCE,
-              icon:'img/google-pin-one.png'
-            });
-            
-            var infowindow = new google.maps.InfoWindow({
-              content:"united-states"
-            });
-
-            marker.setMap(map);
-            }
-
-            google.maps.event.addDomListener(window, 'load', initialize);        
-
-        </script>
     </body>
 </html>
