Fix email form with Mailgun + EmailJS, updated info, upadted maps

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                         <div class="row">
                                             <div class="co-lg-5 col-md-5">
                                                 <div class="single-tab-image">
-                                                    <a href="#"><img src="img/hotel-facility-parking.jpg" alt="parking"></a>
+                                                    <a href="#"><img src="img/hostal/solar02.jpg" alt="parking"></a>
                                                 </div>
                                             </div>
                                             <div class="co-lg-7 col-md-7">
